[package]
name = "dcl-crypto-middleware-rs"
version = "0.1.1"
description = "Utils to authenticate Decentraland users on Rust services"
repository = "https://github.com/decentraland/dcl-crypto-middleware-rs"
readme = "./README.md"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {version = "0.1.68", optional = true}
dcl-crypto = "0.2.1"
fastrand = { version = "1.9.0", optional = true }
log = "0.4.17"
serde_json = { version = "1.0.96", optional = true}
tokio = { version = "1.28.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["ws", "ws_signed_headers", "signed_fetch"]
ws = ["dep:fastrand", "dep:async-trait", "dep:tokio"]
signed_fetch = []
ws_signed_headers = ["signed_fetch", "dep:serde_json"]